--- a/config/example.yaml
+++ b/config/example.yaml
@@ -1,3 +1,7 @@
 data_sources:
   weatherbit:
     api_key: "your_api_key"
+  open_weather_map:
+    api_key: "your_api_key"
+  visual_crossing:
+    api_key: "your_api_key"
