--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ pytest-asyncio = "^0.23.3"
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.4"
 
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+
 [tool.isort]
 profile = "black"
 
