--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ pydantic = "^2.5.3"
 pydantic-extra-types = "^2.4.1"
 uvloop = "^0.19.0"
 pyyaml = "^6.0.1"
+sqlalchemy = {extras = ["asyncio", "asyncpg"], version = "^2.0.25"}
+alembic = "^1.13.1"
+asyncpg = "^0.29.0"
 
 [tool.poetry.group.dev.dependencies]
 isort = "*"
