--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,10 @@ pytest-asyncio = "^0.23.3"
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.4"
 
+
+[tool.poetry.group.codegen.dependencies]
+datamodel-code-generator = {extras = ["http"], version = "^0.25.2"}
+
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 
