--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ aiofiles = "^23.2.1"
 orjson = "^3.9.12"
 geopy = "^2.4.1"
 scipy = "^1.12.0"
+pyright = "^1.1.349"
 
 [tool.poetry.group.dev.dependencies]
 isort = "*"
