--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,9 @@
 version: '3'
 services:
   postgres_db:
-    image: postgres
+    build:
+      context: .
+      dockerfile: postgres.Dockerfile
     container_name: forecast-postgres
     restart: always
     environment:
