--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ geopy = "^2.4.1"
 scipy = "^1.12.0"
 pyright = "^1.1.349"
 pyarrow = "^15.0.0"
+tenacity = "^8.2.3"
 
 [tool.poetry.group.dev.dependencies]
 isort = "*"
