--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ scipy = "^1.12.0"
 pyright = "^1.1.349"
 pyarrow = "^15.0.0"
 tenacity = "^8.2.3"
+uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
 
 [tool.poetry.group.dev.dependencies]
 isort = "*"
