--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pyarrow = "^15.0.0"
 tenacity = "^8.2.3"
 uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
 tqdm = "^4.66.1"
+scikit-learn = "^1.4.0"
 
 [tool.poetry.group.dev.dependencies]
 isort = "*"
