--- a/forecast-frontend/package.json
+++ b/forecast-frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@mantine/core": "^7.5.1",
+    "@mantine/dates": "^7.5.1",
     "@mantine/form": "^7.5.1",
     "@mantine/hooks": "^7.5.1",
     "@tabler/icons-react": "^2.47.0",
+    "dayjs": "^1.11.10",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
